--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
   <a class="w3-padding-16" href="homepage.html"><i class="fa fa-home w3-xxlarge"></i> <br>HOME </a>
   <a class="w3-padding-16" href="#"><i class="fa fa-search w3-xlarge"></i> <br>SEARCH</a>
   <a class="w3-padding-16" href="addproduct.html"><i class="fa fa-plus-square w3-xlarge"></i> <br>ADD PRODUCT</a>
-  <a class="w3-padding-16" href="addcustomer.html"><i class="fa fa-users w3-xlarge"></i> <br>ADD CUSTOMER</a>
+  <a class="w3-padding-16" href="addcustomer.php"><i class="fa fa-users w3-xlarge"></i> <br>ADD CUSTOMER</a>
   <a class="w3-padding-16" href="newsales.html"><i class="fa fa-dollar w3-xlarge"></i><br>SALES ORDER</a>
   <a class="w3-padding-16" href="newpurchase.html"><i class="fa fa-shopping-cart w3-xlarge"></i>PURCHASE ORDER</a>
   <a class="w3-padding-16" href="addvendor.html"><i class="fa fa-truck w3-xlarge"></i><br>ADD SUPPLIER</a>
@@ -45,7 +45,7 @@
     <img src= "images/product.png" style{height="250" width="185"}/>
     <span id="aprod">ADD PRODUCT</span>
   </a>
-  <a id="cust" href= "addcustomer.html">
+  <a id="cust" href= "addcustomer.php">
     <img src= "images/cust.png" style{height="250" width="185"}/>
     <span id="customer">ADD CUSTOMER</span>
   </a>
