Getting the Postcode to work

--- a/addvendor.html
+++ b/addvendor.html
@@ -38,8 +38,8 @@
                     <tr>
                         <td label for="suppn"> <a id = "hash">*</a> Supplier Name : </td>
                         <td><input type="text" id="suppn" name="suppn" value="" class = "formfield" rows = 1 required></td>
-                        <td label for ="suppc"> Supplier Code : </td>
-                        <td><input type="text" id = "suppc" name= "suppc"  value = "" class = "formfield" rows = 1 ></td>
+                        <td label for ="suppid"> Supplier Code : </td>
+                        <td><input type="text" id = "suppid" name= "suppid"  value = "" class = "formfield" rows = 1 ></td>
                     </tr>
                     <tr>
                         <td label for ="contp"> Contact Person : </td>
