--- a/homepage.html
+++ b/homepage.html
@@ -13,10 +13,10 @@
 <nav class="w3-sidenav w3-black" style="width:102px">
   <a class="w3-padding-16" href="homepage.html"><i class="fa fa-home w3-xxlarge"></i> <br>HOME </a>
   <a class="w3-padding-16" href="#"><i class="fa fa-search w3-xlarge"></i> <br>SEARCH</a>
-  <a class="w3-padding-16" href="addproduct.html"><i class="fa fa-plus-square w3-xlarge"></i> <br>ADD PRODUCT</a>
+  <a class="w3-padding-16" href="addproduct.php"><i class="fa fa-plus-square w3-xlarge"></i> <br>ADD PRODUCT</a>
   <a class="w3-padding-16" href="addcustomer.php"><i class="fa fa-users w3-xlarge"></i> <br>ADD CUSTOMER</a>
   <a class="w3-padding-16" href="newsales.php"><i class="fa fa-dollar w3-xlarge"></i><br>SALES ORDER</a>
-  <a class="w3-padding-16" href="newpurchase.html"><i class="fa fa-shopping-cart w3-xlarge"></i>PURCHASE ORDER</a>
+  <a class="w3-padding-16" href="newpurchase.php"><i class="fa fa-shopping-cart w3-xlarge"></i>PURCHASE ORDER</a>
   <a class="w3-padding-16" href="addvendor.html"><i class="fa fa-truck w3-xlarge"></i><br>ADD SUPPLIER</a>
   <a class="w3-padding-16" href="location.html"><i class="fa fa-map-marker w3-xlarge"></i><br>LOCATION</a>
 </nav>
@@ -41,7 +41,7 @@
     </ul>
   </nav>
 <div class = "buttons">
-  <a id="prod" href= "addproduct.html">
+  <a id="prod" href= "addproduct.php">
     <img src= "images/product.png" style{height="250" width="185"}/>
     <span id="aprod">ADD PRODUCT</span>
   </a>
@@ -55,7 +55,7 @@
   </a>
   </div>
   <div class = "buttons2">
-  <a id="pur" href= "newpurchase.html">
+  <a id="pur" href= "newpurchase.php">
     <img src= "images/pur.png" style{height="250" width="200"}/>
     <span id="porder">PURCHASE ORDER</span>
   </a>
