--- a/location.html
+++ b/location.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> HOME PAGE </title>
+    <title> LOCATION </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "styling.css"/>
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
@@ -26,9 +26,9 @@
         <h2> Inventory Management Made Easy </h2>
     </header>
     <section>
-        <h3>ADD PRODUCT</h3>
+        <h3>PRODUCT LOCATION </h3>
         <img src= "images/loc.png" style{height="250" width="200"}/>
-        <h2>Product Location</h2>
+        <h2>WareHouse / Yards </h2>
         <p>Select The Location within the Warehouse or Yard you would like to explore its' contents</p>
         <div class = "locbutt">
             <a id="a1" href= "#">
@@ -88,10 +88,10 @@
         </div>
         <div class = "locbutt3">
             <a id="y1" href= "#">
-                <img src= "location/y1.jpg" style{height="150" width="350"} class ="locicons"/>
+                <img src= "location/y1.jpg" style{height="150" width="370"} class ="locicons"/>
             </a>
             <a id="y2" href= "#">
-                <img src= "location/y2.jpg" style{height="150" width="350"} class ="locicons"/>
+                <img src= "location/y2.jpg" style{height="150" width="370"} class ="locicons"/>
             </a>
             </div>
     </section>
