Alert successful and redirect

--- a/location.html
+++ b/location.html
@@ -94,6 +94,16 @@
                 <img src= "location/y2.jpg" style{height="150" width="370"} class ="locicons"/>
             </a>
             </div>
+
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">x</span>
+                <p>Some text in the Modal..</p>
+            </div>
+
+
     </section>
 </div>
 <footer>
