Alert successful and redirect

--- a/location.html
+++ b/location.html
@@ -31,7 +31,7 @@
         <h2>WareHouse / Yards </h2>
         <p>Select The Location within the Warehouse or Yard you would like to explore its' contents</p>
         <div class = "locbutt">
-            <a id="a1" href= "#">
+            <a id="a1">
                 <img src= "location/a1.jpeg" style{height="150" width="150"} class ="locicons"/>
             </a>
             <a id="a2" href= "#">
@@ -62,13 +62,13 @@
             <a id="c1" href= "#">
                 <img src= "location/c1.jpg" style{height="150" width="150"} class ="locicons"/>
             </a>
-            <a id="b2" href= "#">
+            <a id="c2" href= "#">
                 <img src= "location/c2.jpg" style{height="150" width="150"} class ="locicons"/>
             </a>
-            <a id="b3" href= "#">
+            <a id="c3" href= "#">
                 <img src= "location/c3.jpg" style{height="150" width="150"} class ="locicons"/>
             </a>
-            <a id="b4" href= "#">
+            <a id="c4" href= "#">
                 <img src= "location/c4.jpg" style{height="150" width="150"} class ="locicons"/>
             </a>
         </div>
