--- a/addvendor.html
+++ b/addvendor.html
@@ -25,6 +25,7 @@
     <header>
         <h1> RGU Oil Services </h1>
         <h2> Inventory Management Made Easy </h2>
+        <a id="logout" href="logout.php"><input type = "button" value = "LOG OUT"/></a>
     </header>
     <section>
         <h3>ADD SUPPLIER</h3>
